--- a/playstation.html
+++ b/playstation.html
@@ -18,10 +18,12 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <link rel="stylesheet" href="style/header.css">
     
   </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" src="/_js/cards.js"></script>
+    <script type="text/babel" src="script/script.js"></script>
 </body>
 </html>
