--- a/playstation.html
+++ b/playstation.html
@@ -24,6 +24,43 @@
   </head>
 <body>
     <div id="root"></div>
+    <footer>
+        <div class="container d-flex" style="margin-left: 10%">
+            <div class="footer_left" >
+                <img style="margin-top: -15%" src="https://www.playstation.com/etc.clientlibs/global_pdc/clientlibs/clientlib-base/resources/ps-bug.svg" alt="" height="96" width="96"/>
+                <p><i class="bi bi-globe"></i> Country / Region: Brazil</p>
+                <img  style="margin-top: 30%" src="https://www.playstation.com/etc.clientlibs/global_pdc/clientlibs/clientlib-base/resources/sie.svg" alt=""  width="128"/>
+                <p>© 2021 Sony Interactive Entertainment LLC</p>
+            </div>
+            <div class="footer_right d-flex" style="margin-left: 12%">
+                <ul>
+                    <li>Suporte</li>
+                    <li>Política de privacidade</li>
+                    <li>Termos de serviço</li>
+                    <li>PlayStation Studios</li>
+                    <li>Sobre a SIE</li>
+                    <li>PlayStation e o meio ambiente</li>
+                </ul>
+                <ul>
+                    <li>Termos de serviço e contrato do usuário</li>
+                    <li>Política de cancelamento da PS ™Store</li>
+                    <li>Avisos sobre saúde</li>
+                    <li>Classificacao</li>
+                    <li>Carreiras</li>
+                    <li>Desenvolvedores</li>
+                    <li>Mapa do Site</li>
+                </ul>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>YouTube</li>
+                    <li>Instagram</li>
+                    <li>Twitch</li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
     <script type="text/babel" src="script/script.js"></script>
 </body>
 </html>
