--- a/playstation.html
+++ b/playstation.html
@@ -42,13 +42,9 @@
                             <li><a className="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                         </li>
-                        <li className="nav-item">
-                        <a className="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
                     </ul>
                     <form className="d-flex">
-                        <input className="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button className="btn btn-outline-success" type="submit">Search</button>
+                        <button className="botao" type="submit">Iniciar Sessão</button>
                     </form>
                     </div>
                 </div>
