--- a/playstation.html
+++ b/playstation.html
@@ -41,7 +41,25 @@
                             <li><a className="dropdown-item" href="#">Another action</a></li>
                             <li><a className="dropdown-item" href="#">Something else here</a></li>
                         </ul>
-                        </li>
+                        </li> 
+            <ul class="nav-item">
+              <a class="nav-link" href="#">Jogos</a>
+            </ul>
+            <ul class="nav-item">
+              <a class="nav-link" href="#">Hardware</a>
+            </ul>
+            <ul class="nav-item">
+              <a class="nav-link" href="#">Serviços</a>
+            </ul>
+            <ul class="nav-item">
+              <a class="nav-link" href="#">Notícias</a>
+            </ul>
+            <ul class="nav-item">
+              <a class="nav-link" href="#">Loja</a>
+            </ul>
+            <ul class="nav-item">
+              <a class="nav-link" href="#">Serviços</a>
+            </ul>
                     </ul>
                     <form className="d-flex">
                         <button className="botao" type="submit">Iniciar Sessão</button>
