--- a/playstation.html
+++ b/playstation.html
@@ -31,7 +31,7 @@
                 <div className="container-fluid">
                     <img className="logo" src="_img/lo.png" />
                     <div className="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul className="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul className="navbar-nav me-auto mb-2 mb-lg-0" />
                         <li className="nav-item dropdown">
                         <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Dropdown
@@ -42,25 +42,26 @@
                             <li><a className="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                         </li> 
-            <ul class="nav-item">
-              <a class="nav-link" href="#">Jogos</a>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link" href="#">Hardware</a>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link" href="#">Serviços</a>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link" href="#">Notícias</a>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link" href="#">Loja</a>
-            </ul>
-            <ul class="nav-item">
-              <a class="nav-link" href="#">Serviços</a>
-            </ul>
-                    </ul>
+                        <ul>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Jogos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Hardware</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Serviços</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Notícias</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Loja</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Serviços</a>
+                          </li>
+                        </ul>
                     <form className="d-flex">
                         <button className="botao" type="submit">Iniciar Sessão</button>
                     </form>
