--- a/playstation.html
+++ b/playstation.html
@@ -31,20 +31,14 @@
                 <div className="container-fluid">
                     <img className="logo" src="_img/lo.png" />
                     <div className="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul className="navbar-nav me-auto mb-2 mb-lg-0" />
-                        <li className="nav-item dropdown">
-                        <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul className="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a className="dropdown-item" href="#">Action</a></li>
-                            <li><a className="dropdown-item" href="#">Another action</a></li>
-                            <li><a className="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                        </li> 
-                        <ul>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Jogos</a>
+                        <ul className="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li className="nav-item dropdown">
+                            <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Jogos</a>
+                            <ul className="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a className="dropdown-item" href="#">Action</a></li>
+                              <li><a className="dropdown-item" href="#">Another action</a></li>
+                              <li><a className="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#">Hardware</a>
