--- a/playstation.html
+++ b/playstation.html
@@ -22,7 +22,7 @@
 
     function Header(){
         return <div className="bg-black text-white">
-           <h1 className="text-end">SONY</h1> 
+           <h1 className="text-end"><img className="logo-sony" src="https://aliancageek.files.wordpress.com/2018/06/symbol-sony.jpg" /></h1> 
         </div>;
     }
     function Dropdown(){
