--- a/playstation.html
+++ b/playstation.html
@@ -40,20 +40,45 @@
                               <li><a className="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Hardware</a>
+                          <li class="nav-item dropdown">
+                            <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Hardware</a>
+                            <ul className="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a className="dropdown-item" href="#">Action</a></li>
+                              <li><a className="dropdown-item" href="#">Another action</a></li>
+                              <li><a className="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                          <li class="nav-item dropdown">
+                            <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Serviços</a>
+                            <ul className="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a className="dropdown-item" href="#">Action</a></li>
+                              <li><a className="dropdown-item" href="#">Another action</a></li>
+                              <li><a className="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Notícias</a>
+                          <li class="nav-item dropdown">
+                            <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Notícias</a>
+                            <ul className="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a className="dropdown-item" href="#">Action</a></li>
+                              <li><a className="dropdown-item" href="#">Another action</a></li>
+                              <li><a className="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Loja</a>
+                          <li class="nav-item dropdown">
+                            <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Loja</a>
+                            <ul className="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a className="dropdown-item" href="#">Action</a></li>
+                              <li><a className="dropdown-item" href="#">Another action</a></li>
+                              <li><a className="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Serviços</a>
+                          <li class="nav-item dropdown">
+                            <a className="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Suporte</a>
+                            <ul className="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a className="dropdown-item" href="#">Action</a></li>
+                              <li><a className="dropdown-item" href="#">Another action</a></li>
+                              <li><a className="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
                           </li>
                         </ul>
                     <form className="d-flex">
