--- a/playstation.html
+++ b/playstation.html
@@ -84,6 +84,7 @@
                     <form className="d-flex">
                         <button className="botao" type="submit">Iniciar Sessão</button>
                     </form>
+                    <i className="bi bi-search" />
                     </div>
                 </div>
             </nav>
