--- a/playstation.html
+++ b/playstation.html
@@ -19,6 +19,34 @@
 <body>
     <div id="root"></div>
     <script type="text/babel">
+    function Carrossel () {
+      return (
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+      </div>
+      )
+    }
+
+    function BotaoCarrossel() {
+      return null
+    }
+
+    function Hero() {
+      return (<div>
+                  <Carrossel />
+                  <BotaoCarrossel />
+            </div>)
+    }
 
     function Header(){
         return <div className="bg-black text-white">
@@ -96,6 +124,7 @@
             <div>
                 <Header />
                 <Dropdown />
+                <Hero />
             </div>
         );
     }
