--- a/playstation.html
+++ b/playstation.html
@@ -24,13 +24,19 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/death-stranding-directors-cut-homepage-hero-desktop-01-ps5-29jun21$en?$1600px$" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
               <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
-              <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/diablo-ii-resurrected-listing-thumb-01-en-25jun21?$1600px$" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/fifa-22-hero-banner-desktop-01-ps4-ps5-en-23jun21?$1600px$" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/playstation-ecosystem-ps4-to-ps5-hero-banner-desktop-01-en-09aug21?$1600px$" class="d-block w-100" alt="..." />
             </div>
           </div>
       </div>
