--- a/playstation.html
+++ b/playstation.html
@@ -44,7 +44,27 @@
     }
 
     function BotaoCarrossel() {
-      return null
+      return (
+        <div className="container-fluid">
+          <div className="botao-carrossel">
+            <div>
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/fifa-22-keyart-01-ps4-ps5-en-18aug21?$1600px$" />
+            </div>
+            <div>
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/playstation-ecosystem-ps4-to-ps5-keyart-01-en-09aug21?$1600px$" />
+            </div>
+            <div>
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/diablo-ii-resurrected-listing-thumb-01-en-25jun21?$1600px$" />
+            </div>
+            <div>
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/death-stranding-directors-cut-keyart-01-en-05may21?$1600px$" />
+            </div>
+            <div>
+              <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-key-art-image-block-en-01-03aug20?$1600px$" />
+            </div>
+          </div>
+        </div>
+      )
     }
 
     function Hero() {
