--- a/playstation.html
+++ b/playstation.html
@@ -25,19 +25,34 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="https://gmedia.playstation.com/is/image/SIEPDC/death-stranding-directors-cut-homepage-hero-desktop-01-ps5-29jun21$en?$1600px$" class="d-block w-100" alt="..." />
-            </div>
+              <div class="texto">
+                <p>O futuro está nas suas mãos</p>
+                </div>
+              </div>
             <div class="carousel-item">
               <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
-            </div>
+              <div class="texto">
+                <p>Quebre o loop</p>
+                </div>
+              </div>
             <div class="carousel-item">
               <img src="https://gmedia.playstation.com/is/image/SIEPDC/diablo-ii-resurrected-listing-thumb-01-en-25jun21?$1600px$" class="d-block w-100" alt="..." />
-            </div>
+              <div class="texto">
+                <p>Que erga-se Diablo, Lorde do Terror</p>
+                </div>
+              </div>
             <div class="carousel-item">
               <img src="https://gmedia.playstation.com/is/image/SIEPDC/fifa-22-hero-banner-desktop-01-ps4-ps5-en-23jun21?$1600px$" class="d-block w-100" alt="..." />
-            </div>
+              <div class="texto">
+                <p>Powered by Football™</p>
+                </div>
+              </div>
             <div class="carousel-item">
               <img src="https://gmedia.playstation.com/is/image/SIEPDC/playstation-ecosystem-ps4-to-ps5-hero-banner-desktop-01-en-09aug21?$1600px$" class="d-block w-100" alt="..." />
-            </div>
+              <div class="texto">
+                <p>Grandes experiências que acompanham você no PS4™ e PS5™</p>
+                </div>
+              </div>
           </div>
       </div>
       )
