--- a/playstation.html
+++ b/playstation.html
@@ -91,13 +91,14 @@ function Dropdown(props) {
                                         </div>
                                     </li>
                                 </ul>
-                            </ul>
                             <hr/>
                             <ul className="list-group list-group-horizontal">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li className="m-3">{props.li1}</li>
+                                <li className="m-3">{props.li2}</li>
+                                <li className="m-3">{props.li3}</li>
+                                <li className="m-3">{props.li4}</li>
+                                <li className="m-3">{props.li5}</li>
+                            </ul>
                             </ul>
                         </li>
                     </ul>
@@ -122,7 +123,12 @@ function Produtos(){
             foto2: '_img/ps4.png',
             foto3: '_img/psVR.png',
             foto4: '_img/psPlus.png',
-            foto5: '_img/loj.png'
+            foto5: '_img/loj.png',
+            li1: 'PlayStation Indies',
+            li2: 'Jogos para PS4 no PS5',
+            li3: 'PlayStation Hits',
+            li4: 'Ofertas e promoções',
+            li5: ''
         },
         {
             id: 2,
@@ -134,14 +140,21 @@ function Produtos(){
             foto1: '_img/ps5.png',
             foto2: '_img/ps4.png',
             foto3: '_img/ps4PRO.png',
-            foto4: '_img/psVr.png'
+            foto4: '_img/psVr.png',
+            li1: 'Controle sem fio DualSense',
+            li2: 'Headset Pulse 3D',
+            li3: 'Acessórios para o PS5',
+            li4: 'controle sem fio DUALSHOCK 4',
+            li5: 'Acessórios para o PS4'
 
         },
         {
             id: 3,
             title: 'Serviços',
             op1: 'PS Plus',
-            foto1: '_img/psPlus.png'
+            foto1: '_img/psPlus.png',
+            li1: 'Entertenimento no PS4',
+            li2: 'Entertenimento no PS5'
 
         },
         {
@@ -150,14 +163,20 @@ function Produtos(){
             op1: 'PS Blog',
             op2: 'Este mês no PlayStation',
             foto1: '_img/psblog.png',
-            foto2: '_img/calen.png'
+            foto2: '_img/calen.png',
+            li1: 'Central de competições'
 
         },
         {
             id: 5,
             title: 'Lojas',
             op1: 'PS Store',
-            foto1: '_img/loj.png'
+            foto1: '_img/loj.png',
+            li1: 'Comprar Jogos PS5',
+            li2: 'Comprar Jogos PS4',
+            li3: 'Comprar PlayStation Plus',
+            li4: 'Comprar PS4',
+            li5: 'Comprar PS VR'
         },
         {
             id: 6,
@@ -171,7 +190,8 @@ function Produtos(){
     return Produtos.map(ItemMenu=>(
         <Dropdown key={ItemMenu.id} title={ItemMenu.title} op1={ItemMenu.op1} op2={ItemMenu.op2}
          op3={ItemMenu.op3} op4={ItemMenu.op4} op5={ItemMenu.op5} foto1={ItemMenu.foto1} foto2={ItemMenu.foto2}
-         foto3={ItemMenu.foto3} foto4={ItemMenu.foto4} foto5={ItemMenu.foto5}/>
+         foto3={ItemMenu.foto3} foto4={ItemMenu.foto4} foto5={ItemMenu.foto5} li1={ItemMenu.li1} li12={ItemMenu.li12}
+         li3={ItemMenu.li3} li4={ItemMenu.li4} li5={ItemMenu.li5}/>
     ))
 
 }
