--- a/playstation.html
+++ b/playstation.html
@@ -199,45 +199,54 @@ function Produtos(){
 
     function Carrossel () {
       return (
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="https://gmedia.playstation.com/is/image/SIEPDC/death-stranding-directors-cut-homepage-hero-desktop-01-ps5-29jun21$en?$1600px$" class="d-block w-100" alt="..." />
-              <div class="texto">
-                <p>O futuro está nas suas mãos</p>
-                <h2>O lendário criador de jogos, Hideo Kojima, apresenta uma experiência que desafia o gênero, agora expandida e remasterizada para o PS5.</h2>
-                </div>
-              </div>
-            <div class="carousel-item">
-              <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100" alt="..." />
-              <div class="texto">
-                <p>Quebre o loop</p>
-                <h2>Chegou a sua chance de explorar a misteriosa e perigosa ilha de Blackreef, que está presa em um loop temporal.</h2>
-                </div>
-              </div>
-            <div class="carousel-item">
-              <img src="https://gmedia.playstation.com/is/image/SIEPDC/diablo-ii-resurrected-listing-thumb-01-en-25jun21?$1600px$" class="d-block w-100" alt="..." />
-              <div class="texto">
-                <p>Que erga-se Diablo, Lorde do Terror</p>
-                <h2>Jogue a remasterização definitiva de Diablo II e a sua expansão - dois títulos emblemáticos da série que definiu o gênero de RPG de ação.</h2>
-                </div>
-              </div>
-            <div class="carousel-item">
-              <img src="https://gmedia.playstation.com/is/image/SIEPDC/fifa-22-hero-banner-desktop-01-ps4-ps5-en-23jun21?$1600px$" class="d-block w-100" alt="..." />
-              <div class="texto">
-                <p>Powered by Football™</p>
-                <h2>Do Modo Carreira ao FUT, comece a jogar agora e aproveite uma nova temporada de inovação em todos os modos.</h2>
-                </div>
-              </div>
-            <div class="carousel-item">
-              <img src="https://gmedia.playstation.com/is/image/SIEPDC/playstation-ecosystem-ps4-to-ps5-hero-banner-desktop-01-en-09aug21?$1600px$" class="d-block w-100" alt="..." />
-              <div class="texto">
-                <p>Grandes experiências que acompanham você no PS4™ e PS5™</p>
-                <h2>Permaneça no mundo PlayStation com jogos, serviços e recursos que unem os consoles PS4™ e PS5™</h2>
-                </div>
-              </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
           </div>
-      </div>
+          <div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://gmedia.playstation.com/is/image/SIEPDC/death-stranding-directors-cut-homepage-hero-desktop-01-ps5-29jun21$en?$1600px$" class="d-block w-100" class="d-block w-100" alt="..."/>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2>O futuro está nas suas mãos</h2>
+                    <p>O lendário criador de jogos, Hideo Kojima, apresenta uma experiência que desafia o gênero, agora expandida e remasterizada para o PS5.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="https://gmedia.playstation.com/is/image/SIEPDC/deathloop-pre-orders-homepage-marquee-desktop-01-ps5-en-23nov20?$1600px$" class="d-block w-100"  class="d-block w-100" alt="..."/>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2>Quebre o loop</h2>
+                    <p>Chegou a sua chance de explorar a misteriosa e perigosa ilha de Blackreef, que está presa em um loop temporal.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="https://gmedia.playstation.com/is/image/SIEPDC/diablo-ii-resurrected-listing-thumb-01-en-25jun21?$1600px$" class="d-block w-100" class="d-block w-100" alt="..."/>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2>Que erga-se Diablo, Lorde do Terror</h2>
+                    <p>Jogue a remasterização definitiva de Diablo II e a sua expansão - dois títulos emblemáticos da série que definiu o gênero de RPG de ação.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="https://gmedia.playstation.com/is/image/SIEPDC/fifa-22-hero-banner-desktop-01-ps4-ps5-en-23jun21?$1600px$" class="d-block w-100" class="d-block w-100" alt="..."/>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2>Powered by Football™</h2>
+                    <p>Do Modo Carreira ao FUT, comece a jogar agora e aproveite uma nova temporada de inovação em todos os modos.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="https://gmedia.playstation.com/is/image/SIEPDC/playstation-ecosystem-ps4-to-ps5-hero-banner-desktop-01-en-09aug21?$1600px$" class="d-block w-100" class="d-block w-100" alt="..."/>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2>Grandes experiências que acompanham você no PS4™ e PS5™</h2>
+                    <p>Permaneça no mundo PlayStation com jogos, serviços e recursos que unem os consoles PS4™ e PS5™.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
       )
     }
 
